# pfsense-api-client

./: .gitignore  .pylintrc  404.html  README.md  SECURITY.MD  check_stuff.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_aliases.py  test_api.py  test_firewall.py  test_firewall_rules.py
.github/workflows/: mkdocs.yml  pylint.yml  pytest.yml  shellcheck.yml  testing.yml
api/: index.html
client/: index.html
docs/: api.md  client.md  mixin_firewall.md  mixin_service.md  mixin_status.md  mixin_system.md
examples/: dhcp.py
mixin_firewall/: index.html
mixin_service/: index.html
mixin_status/: index.html
mixin_system/: index.html
pfsense_api_client/: __init__.py  api_types.py  constants.py  firewall.py  interface.py  routing.py  status.py  system.py  user.py
pfsense_api_client/service/: __init__.py  dns.py
search/: search_index.json
tests/: __init__.py  test_aliases.py  test_api.py  test_dhcp.py  test_firewall.py  test_system.py  utils.py
