[tool.poetry]
name = "pfsense-api-client"
version = "0.1.0"
description = "A client for the unofficial pfSense API https://github.com/jaredhendrickson13/pfsense-api"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
click = "^8.0.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pytest = "^6.2.5"
mypy = "^0.931"
black = "^21.12b0"
types-requests = "^2.27.7"
pylint-pydantic = "^0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
