[tool.poetry]
name = "pfsense-api-client"
version = "0.1.0"
description = "A client for the unofficial pfSense API https://github.com/jaredhendrickson13/pfsense-api"
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/yaleman/pfsense-api-client/"
repository = "https://github.com/yaleman/pfsense-api-client/"
documentation = "https://yaleman.github.io/pfsense-api-client/"

keywords = [
    "pfsense",
    "API",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
click = "^8.0.3"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.0"
pytest = "^7.1.3"
mypy = "^0.971"
black = "^22.8"
types-requests = "^2.28.10"
pylint-pydantic = "^0.1.4"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.4.3"
mkdocs = "^1.3.1"
loguru = "^0.6.0"
pylint-pytest = "^1.1.2"
click = "^8.1.2"
questionary = "^1.10.0"
mkdocstrings-python = "^0.7.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "pfsense-api-client"
description = "A client for the unofficial pfSense API https://github.com/jaredhendrickson13/pfsense-api"
license = "MIT"
version = "0.0.1"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]

[tool.pylint.MASTER]
disable="W0511,R0801"
# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-759522422
extension-pkg-whitelist="pydantic"
max-line-length=200
load-plugins="pylint_pydantic,pylint_pytest"
